tests/vertical-slice/reject/mir_gap_where_clause_proj_mono.hew
// Ratchet for `mir-gap-where-clause-proj-monomorph`.
//
// A generic function whose type parameter `A` appears ONLY in a where-clause
// projection (`where I: Iterator<Item = A>`) — never in a value parameter or
// the return type — cannot be monomorphised by the collector today: `A` is not
// pinned by any concrete argument, so the call has no MIR body to lower and the
// compiler fails closed with `E_NOT_YET_IMPLEMENTED: MIR lowering for function
// call`.
//
// This is the generic-terminal blocker: `std::iter::count`/`collect` carry a
// free `A` in exactly this position, which is why the lazy terminal fixtures
// pin `Item = i64` concretely. When the collector learns to pin a
// projection-only type param this fixture flips to an accept (it returns the
// item count) — see `iter_generic_count_collect` in run.sh.

type Countdown {
    n: i64;
}

impl Iterator for Countdown {
    type Item = i64;
    fn next(var self) -> Option<i64> {
        if self.n <= 0 {
            None
        } else {
            let cur = self.n;
            self.n = self.n - 1;
            Some(cur)
        }
    }
}

// `A` is reachable only through `I`'s `Iterator<Item = A>` bound.
fn count_items<I, A>(it: I) -> i64 where I: Iterator<Item = A> {
    var c = 0;
    var cur = it;
    loop {
        match cur.next() {
            Some(_x) => {
                c = c + 1;
            },
            None => {
                break;
            },
        }
    }
    c
}

pub fn main() -> i64 {
    count_items(Countdown { n: 4 })
}
